Remove unused code, fix FindBugs warning
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1073320 13f79535-47bb-0310-9956-ffa450edef68